# OneRSS

./: AGENTS.md  Agents.md  CMakeLists.txt  Dockerfile.backend  README.md  THIRD_PARTY_NOTICES.txt
.github/workflows/: backend-container.yml  flatpak.yml  release-ga.yml
android/: README.md
backend/: CMakeLists.txt  README.md
backend/src/: app_server.cpp  app_server.h  article_sanitizer.h  article_types.cpp  article_types.h  feed_fetcher.cpp  feed_fetcher.h  feed_refresh_scheduler.cpp  feed_refresh_scheduler.h  html_sanitizer.cpp  html_sanitizer.h  logging.cpp  logging.h  main.cpp  protocol_io.h  protocol_io_impl.h  signup_server.cpp  signup_server.h  sqlite.cpp  sqlite.h  sqlite_tree_repository.cpp  sqlite_tree_repository.h  ssl_util.cpp  ssl_util.h  tree_repository.cpp  tree_repository.h  user_notification.cpp  user_notification.h  user_store.cpp  user_store.h
cmake/: OneRssFetch.cmake
desktop/: CMakeLists.txt  README.md
desktop/android/: AndroidManifest.xml
desktop/src/: app_client.cpp  app_client.h  app_info.cpp  app_info.h  article_list_model.cpp  article_list_model.h  article_types.cpp  article_types.h  browser_profile_manager.cpp  browser_profile_manager.h  feed_title_resolver.cpp  feed_title_resolver.h  feed_tree_model.cpp  feed_tree_model.h  logging.cpp  logging.h  main.cpp  main_view_model.cpp  main_view_model.h  protocol_io.h  protocol_io_impl.h  secret_store.cpp  secret_store.h  signup_client.cpp  signup_client.h  signup_view_model.cpp  signup_view_model.h  tray_controller.cpp  tray_controller.h  tree_types.cpp  tree_types.h  user_notification.cpp  user_notification.h
desktop/src/qml/: AboutDialog.qml  ArchiveSettings.qml  ArticleListPane.qml  ArticlePreviewPane.qml  BrowserSettings.qml  FeedPane.qml  GeneralSettings.qml  LoggingSettings.qml  Main.qml  MaterialIcon.qml  SettingsDialog.qml  SignupDialog.qml
flatpak/: org.jgaa.OneRSS.desktop  org.jgaa.OneRSS.metainfo.xml.in  org.jgaa.OneRSS.yaml
proto/: CMakeLists.txt  onerss.proto
spec/: initial-spec.md
